tests/negative/neg_pr362_positional_after_named.safe
package neg_pr362_positional_after_named

   subtype small_value is integer (0 to 10)

   function combine (left : small_value; right : small_value) returns integer
      return left + right

   function broken returns integer
      return combine (1, right = 2)
